--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "xz-components-lib",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production --config webpack.config.js"
+    "build": "webpack --mode production --config webpack.config.js",
+    "publish": "npm publish"
   },
   "keywords": [],
   "author": "xz",
   "license": "ISC",
   "dependencies": {
-    "css-loader": "^6.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "css-loader": "^6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
@@ -39,6 +37,11 @@
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
+  },
+  "peerDependencies": {    
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "repository": {
     "type": "git",
